force-app/main/default/objects/CLM_Allocation__c/CLM_Allocation__c.object-meta.xml
<CustomObject>
    <label>Claim Allocation</label>
    <nameField>
        <label>Claim Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>