force-app/main/default/objects/CLM_Allocation__c/fields/AllocatedTotalAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>AllocatedTotalAmt_fm__c</fullName>
    <formula>LossAmt__c + ExpAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>