force-app/main/default/objects/CLM_Allocation__c/fields/Claim_md__c.field-meta.xml
<CustomField>
    <fullName>Claim_md__c</fullName>
    <label>SOC/PLA No.</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Claim Allocation</relationshipLabel>
    <relationshipName>ClaimAllocationByClaim</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>