force-app/main/default/objects/CLM_Allocation__c/fields/ClaimCurrency__c.field-meta.xml
<CustomField>
    <fullName>ClaimCurrency__c</fullName>
    <label>Claim Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>