force-app/main/default/objects/CLM_Allocation__c/fields/ClaimPeriod_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimPeriod_fm__c</fullName>
    <formula>Claim_md__r.ClaimPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Period (for BDX)</label>
    <type>Text</type>
</CustomField>