force-app/main/default/objects/CLM_Allocation__c/fields/ClaimSeq_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimSeq_fm__c</fullName>
    <formula>RIGHT(&quot;000&quot; &amp; TEXT(Claim_md__r.ParentSeq__c), 3) &amp; &quot;-&quot; &amp; RIGHT(&quot;000&quot; &amp; TEXT(Claim_md__r.ChildSeq__c), 3) &amp; &quot;-&quot;
&amp; CASE(TEXT(ClaimDocType__c),&quot;PLA&quot;, &quot;P&quot;, &quot;SOC&quot;, &quot;S&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Seq</label>
    <type>Text</type>
</CustomField>