force-app/main/default/objects/CLM_Allocation__c/fields/ClaimStage_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimStage_fm__c</fullName>
    <formula>TEXT(Claim_md__r.Stage__c)</formula>
    <label>Claim Stage</label>
    <type>Text</type>
</CustomField>