force-app/main/default/objects/CLM_Allocation__c/fields/ClaimStatus_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatus_fm__c</fullName>
    <description>Child Claim(Master)의 Status</description>
    <formula>TEXT(Claim_md__r.Status)</formula>
    <label>Claim Status</label>
    <type>Text</type>
</CustomField>