force-app/main/default/objects/CLM_Allocation__c/fields/ClosingStatus__c.field-meta.xml
<CustomField>
    <fullName>ClosingStatus__c</fullName>
    <label>Closing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posting Oprn</fullName>
            </value>
            <value>
                <fullName>Posting Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>