force-app/main/default/objects/CLM_Allocation__c/fields/ClosingStatus_fm__c.field-meta.xml
<CustomField>
    <fullName>ClosingStatus_fm__c</fullName>
    <formula>TEXT(  Claim_md__r.ClosingStatus__c )</formula>
    <label>Closing Status</label>
    <type>Text</type>
</CustomField>