force-app/main/default/objects/CLM_Allocation__c/fields/Facility_lk__c.field-meta.xml
<CustomField>
    <fullName>Facility_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Claim Allocation</relationshipLabel>
    <relationshipName>Claim_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>