force-app/main/default/objects/CLM_Allocation__c/fields/FacilityBDXOffset_is__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDXOffset_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility BDX Offset</label>
    <type>Checkbox</type>
</CustomField>