force-app/main/default/objects/CLM_Allocation__c/fields/FXRatetoSettlementCurrency__c.field-meta.xml
<CustomField>
    <fullName>FXRatetoSettlementCurrency__c</fullName>
    <label>FX Rate to Settlement Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>