force-app/main/default/objects/CLM_Allocation__c/fields/FXRatetoSettlementCurrency_fm__c.field-meta.xml
<CustomField>
    <fullName>FXRatetoSettlementCurrency_fm__c</fullName>
    <formula>Claim_md__r.FXRateToSettleCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Rate to Settlement Currency</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>