force-app/main/default/objects/CLM_Allocation__c/fields/IssueDate_fm__c.field-meta.xml
<CustomField>
    <fullName>IssueDate_fm__c</fullName>
    <formula>Claim_md__r.IssueDate__c</formula>
    <label>SOC/PLA Issue Date</label>
    <type>Date</type>
</CustomField>