force-app/main/default/objects/CLM_Allocation__c/fields/MGAName_lk__c.field-meta.xml
<CustomField>
    <fullName>MGAName_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MGA Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Allocation (MGA Name)</relationshipLabel>
    <relationshipName>Claim_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>