force-app/main/default/objects/CLM_Allocation__c/fields/Panel_lk__c.field-meta.xml
<CustomField>
    <fullName>Panel_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel</label>
    <referenceTo>OPP_Panel__c</referenceTo>
    <relationshipLabel>Claim Allocation</relationshipLabel>
    <relationshipName>Claim_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>