force-app/main/default/objects/CLM_Allocation__c/fields/PanelGroupSeq__c.field-meta.xml
<CustomField>
    <fullName>PanelGroupSeq__c</fullName>
    <label>Seq.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>