force-app/main/default/objects/CLM_Allocation__c/fields/PostingDate_fm__c.field-meta.xml
<CustomField>
    <fullName>PostingDate_fm__c</fullName>
    <formula>Claim_md__r.PostingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>