force-app/main/default/objects/CLM_Allocation__c/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>