force-app/main/default/objects/CLM_Allocation__c/fields/ReceivedDate_fm__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate_fm__c</fullName>
    <formula>Claim_md__r.ReceivedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>