force-app/main/default/objects/CLM_Allocation__c/fields/Reinsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Accounts marked as Reinsurers are eligible for selection.
Please verify that the &quot;Is Reinsurer Account&quot; field is set to True.</errorMessage>
        <filterItems>
            <field>Account.isReinsurerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Allocation</relationshipLabel>
    <relationshipName>ClaimAllocationByAccount</relationshipName>
    <type>Lookup</type>
</CustomField>