force-app/main/default/objects/CLM_Allocation__c/fields/SignedLine__c.field-meta.xml
<CustomField>
    <fullName>SignedLine__c</fullName>
    <label>Signed Line(%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>