force-app/main/default/objects/CLM_Allocation__c/fields/TotalAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalAmt_fm__c</fullName>
    <formula>Claim_md__r.TotalAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>