force-app/main/default/objects/CLM_Allocation__c/fields/TotalAmtForRI__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtForRI__c</fullName>
    <label>Total Amount (for Reinsurer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>