force-app/main/default/objects/CLM_Allocation__c/fields/TotalAmtForRISettled__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtForRISettled__c</fullName>
    <label>Total Amount (for Reinsurer) Settled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>