force-app/main/default/objects/CLM_Allocation__c/fields/X_ClaimPeriod__c.field-meta.xml
<CustomField>
    <fullName>X_ClaimPeriod__c</fullName>
    <label>(X)Claim Period (for BDX)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>