force-app/main/default/objects/CLM_Allocation__c/fields/X_ClosingStatus__c.field-meta.xml
<CustomField>
    <fullName>X_ClosingStatus__c</fullName>
    <label>(X)Closing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posting Oprn</fullName>
            </value>
            <value>
                <fullName>Posting Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>