force-app/main/default/objects/CLM_Allocation__c/fields/X_PostingDate__c.field-meta.xml
<CustomField>
    <fullName>X_PostingDate__c</fullName>
    <label>(X)Posting Date</label>
    <type>Date</type>
</CustomField>