force-app/main/default/objects/CLM_Allocation__c/fields/X_ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>X_ReceivedDate__c</fullName>
    <label>(X)Received Date</label>
    <type>Date</type>
</CustomField>